--- a/index.html
+++ b/index.html
@@ -42,41 +42,100 @@
         <p class="feature-info">It is a long established fact that a reader will be distracted by the readable content
             of a page when looking at its layout.</p>
         <section>
+            <div class="main-div-container">
+                <div class="fault">
+                    <div class="container-pic1">
+                        <img src="Flower Asset/pngwing 6.png" alt="">
+                    </div>
+                    <div class="para-info">
+                        <p>Pink Flower Tree</p>
+                    </div>
+                </div>
+                <div class="fault">
+                    <div class="container-pic2">
+                        <img src="Flower Asset/pngwing 5.png" alt="">
+                    </div>
+                    <div class="para-info">
+                        <p>Pink Flower Tree</p>
+                    </div>
+                </div>
+                <div class="fault">
+                    <div class="container-pic3">
+                        <img src="Flower Asset/pngwing 7.png" alt="">
+                    </div>
+                    <div class="para-info">
+                        <p>Pink Flower Tree</p>
+                    </div>
+                </div>
 
+            </div>
         </section>
-        <div class="main-div-container">
-            <div class="fault">
-                <div class="container-pic1">
-                    <img src="Flower Asset/pngwing 6.png" alt="">
+
+        <section>
+            <div class="service-container">
+                <div class="div-main">
+                    <img src="Flower Asset/Group 57.png" alt="" class="img0">
+                    <p class="img-description">Same Day Delivery. Click & Collect.</p>
                 </div>
-                <div class="para-info">
-                    <p>Pink Flower Tree</p>
+                <div class="div-main">
+                    <img src="Flower Asset/Group 58.png" alt="" class="img0">
+                    <p class="img-description">Fresh Flowers. Local Growers.</p>
                 </div>
-            </div>
-            <div class="fault">
-                <div class="container-pic2">
-                    <img src="Flower Asset/pngwing 5.png" alt="">
-                </div>
-                <div class="para-info">
-                    <p>Pink Flower Tree</p>
-                </div>
-            </div>
-            <div class="fault">
-                <div class="container-pic3">
-                    <img src="Flower Asset/pngwing 7.png" alt="">
-                </div>
-                <div class="para-info">
-                    <p>Pink Flower Tree</p>
+                <div class="div-main">
+                    <img src="Flower Asset/Group 59.png" alt="" class="img0">
+                    <p class="img-description">24/7 Free Support.</p>
                 </div>
             </div>
+        </section>
+
+        <section>
+            <div class="discount-container">
+                <div class="discount">
+                    <h1>
+                        Hot Deal ! Sale Up To 25% <span class="span1">Off</span>
+                    </h1>
+                    <p>
+                        It is a long established fact that a reader will be distracted by the readable content of a page
+                        when looking at its layout.
+                    </p>
+                    <button>
+                        Sign Up
+                    </button>
+                </div>
+                <div class="discount">
+                    <img src="Flower Asset/pngwing 8.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="instagram">
+                <h1 class="ins-title">
+                    Instagram
+                </h1>
+                <p class="ins-discription">
+                    It is a long established fact that a reader will be distracted by the readable content of a page
+                    when looking at its layout.
+                </p>
+                <div class="ins-img">
+                    <div class="ins-gap"><img src="Flower Asset/Flower 01.png" alt=""></div>
+                    <div class="ins-gap"><img src="Flower Asset/Rectangle 4.png" alt=""></div>
+                    <div class="ins-gap"><img src="Flower Asset/Rectangle 5.png" alt=""></div>
+                    <div class="ins-gap"><img src="Flower Asset/Rectangle 6.png" alt=""></div>
+                </div>
+
+            </div>
+        </section>
+
+        <section>
+            <div class="deals-container">
+                <h1>Get The Latest Deals</h1>
+                <p>$30 coupon for first shopping</p>
 
 
-
-
-
-        </div>
-
+            </div>
+        </section>
     </main>
+
 
     <footer>
 
