--- a/index.html
+++ b/index.html
@@ -126,18 +126,29 @@
             </div>
         </section>
 
-        <section>
-            <div class="deals-container">
-                <h1>Get The Latest Deals</h1>
-                <p>$30 coupon for first shopping</p>
-
-
-            </div>
-        </section>
     </main>
 
 
     <footer>
+        
+            <div class="deals-container">
+                <h1>Get The Latest Deals</h1>
+                <p>$30 coupon for first shopping</p>
+                <div class="info">
+                    <input type="email" placeholder="Enter your email here">
+                    <button>Subscribe</button>
+                </div>
+            </div>
+
+            <section>
+                <div class="footer">
+                    <h1>Flower<span class="footer-span">Shop</span></h1>
+                    <h4>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</h4>
+                    <p>@2020-2023, FlowerShop.com. All rights reserved. </p>
+
+                </div>
+            </section>
+        
 
     </footer>
 
